--- a/nike_product_card/style.css
+++ b/nike_product_card/style.css
@@ -1,16 +1,68 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
 * {
+  margin: 0;
+  padding: 0;
+  font-family: 'Quicksand', sans-serif;
   box-sizing: border-box;
 }
 
-body {
-  font-family: 'Quicksand', sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+html {
+  font-size: 62.5%;
+}
+
+.container {
+  width: 100%;
   height: 100vh;
-  margin: 0;
-  overflow: hidden;
+  background: #262626;
+  display: grid;
+  place-items: center;
+}
+
+.card-wrapper {
+  width: 50rem;
+  height: 70rem;
+  padding: 0 10rem;
+  display: grid;
+  place-items: center;
+}
+
+.logo {
+  width: 8rem;
+  margin-bottom: 2rem;
+}
+
+.card {
+  width: 30rem;
+  height: 55rem;
+  background: #eee;
+  border-radius: 2.5rem;
+  box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.7);
+  position: relative;
+}
+
+.card-top {
+  width: 100%;
+  height: 50%;
+  background: #f1ae04;
+  padding: 3rem;
+  border-radius: 2.5rem 2.5rem 0 0;
+}
+
+.card-top-text {
+  color: #fff;
+}
+
+.card-top-text h1 {
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  margin-bottom: 1rem;
+}
+
+.shoe-1 {
+  width: 30rem;
+  position: absolute;
+  top: -2.5rem;
+  right: -10rem;
 }
