--- a/nike_product_card/style.css
+++ b/nike_product_card/style.css
@@ -25,6 +25,7 @@ html {
   padding: 0 10rem;
   display: grid;
   place-items: center;
+  overflow: hidden;  /*For console effect */
 }
 
 .logo {
@@ -39,6 +40,7 @@ html {
   border-radius: 2.5rem;
   box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.7);
   position: relative;
+  
 }
 
 .card-top {
@@ -48,6 +50,16 @@ html {
   padding: 3rem;
   border-radius: 2.5rem 2.5rem 0 0;
 }
+
+/* shoe change */
+.card-top {
+  transition: background-color 0.5s;
+}
+
+.container.shoe-change .card-top {
+  background: #d35246;
+}
+/*  */
 
 .card-top-text {
   color: #fff;
@@ -61,8 +73,185 @@ html {
 }
 
 .shoe-1 {
-  width: 30rem;
+  width: 20rem;
   position: absolute;
-  top: -2.5rem;
+  top: -5.5rem;
   right: -10rem;
+}
+
+/* Shoe change */
+
+.shoe-1 {
+  transition: transform 1s;
+}
+
+.container.shoe-change .shoe-1 {
+  transform: translateX(-50rem) rotateZ(45deg) scale(0);
+}
+/*  */
+
+.shoe-2 {
+  width: 20rem;
+  position: absolute;
+  top: -8rem;
+  right: -35rem;
+  transform: scale(0);
+}
+
+/* Shoe change */
+
+.shoe-2 {
+  transition: transform 1s;
+}
+.container.shoe-change .shoe-2 {
+  transform: scale(1) translateX(-30rem) rotateZ(-45deg);
+}
+/*  */
+
+.card-bottom {
+  width: 100%;
+  height: 50%;
+  padding: 2rem 3rem;
+}
+
+.card-bottom h1 {
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  color: #333;
+  margin-bottom: 0.6rem;
+}
+
+.badge {
+  position: absolute;
+  top: 30rem;
+  right: 5rem;
+  width: 3.5rem;
+  height: 1.6rem;
+  background: #25d390;
+  color: #fff;
+  display: grid;
+  place-items: center;
+  border-radius: 0.3rem;
+  font-size: 0.9rem;
+  font-weight: 700;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+}
+
+.card-bottom h3 {
+  font-size: 1rem;
+  font-weight: 400;
+  text-transform: uppercase;
+  margin-bottom: 0.6rem;
+}
+
+.stars {
+  margin-bottom: 3rem;
+}
+
+.stars i:last-child {
+  opacity: 0.4;
+}
+
+.size {
+  margin-bottom: 3rem;
+}
+
+.size h4{
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  margin-bottom: 1.3rem;
+}
+
+.sizes {
+  display: flex;
+}
+
+.sizes span {
+  font-size: 1.3rem;
+  margin-right: 2.5rem; 
+}
+
+.sizes span:nth-child(3) {
+  width: 2rem;
+  height: 2rem;
+  color: #fff;
+  background: #25d393;
+  border-radius: 50%;
+  display: grid;
+  place-items: center;
+}
+
+.color h4 {
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  margin-bottom: 1rem;
+}
+
+.colors {
+  display: flex;
+}
+
+.color-1, .color-2 {
+  width: 2rem;
+  height: 2rem;
+  /* background: red; */
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.color-1 {
+  background: #1c477a;
+  margin-right: 1.5rem;
+  box-shadow: 0 1rem 2rem rgba(28, 71, 122, 0.2);
+}
+
+.color-2 {
+  background: #c02244;
+  margin-right: 1.5rem;
+  box-shadow: 0 1rem 2rem rgba(28, 71, 122, 0.3);
+}
+
+.price {
+  width: 16rem;
+  height: 4rem;
+  background: #1c477a;
+  color: #fff;
+  border-radius: 0.5rem;
+  position: absolute;
+  right: -1rem;
+  bottom: 3rem;
+  box-shadow: 0 1rem 2rem rgba(28, 71, 122, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* shoe change */
+.price {
+  transition: background-color 0.5s;
+}
+
+.container.shoe-change .price {
+  background: #d35246;
+}
+/*  */
+
+.price span {
+  font-size: 2rem;
+}
+
+.price span:first-child {
+  font-weight: 300;
+  text-transform: uppercase;
+  margin-right: 1rem;
+}
+
+.price span:last-child {
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-right: 1rem;
 }
