--- a/3d_swing/style.css
+++ b/3d_swing/style.css
@@ -23,13 +23,13 @@ html {
 .swing {
   width: 40rem;
   height: 20rem;
-  background-color: rgb(16, 143, 228);
+  background: rgb(16, 143, 228, 0.5);
   transform: rotateX(70deg) rotateZ(-40deg) rotateY(5deg);
   transform-style: preserve-3d;
   position: absolute;
   top: 50%;
   transform-origin: top;
-  z-index: -1;
+  z-index: 10;
 }
 
 .swing-1 {
@@ -119,7 +119,7 @@ html {
   content: '';
   width: 1rem;
   height: 100%;
-  background: #0d6fb1;
+  background: rgba(13, 111, 177, 0.7);
   position: absolute;
   transform: rotateY(90deg);
   transform-origin: left;
@@ -129,7 +129,7 @@ html {
   content: '';
   width: 100%;
   height: 1rem;
-  background: #117ec6;
+  background: rgba(17, 126, 198, 0.7);
   position: absolute;
   bottom: 0;
   transform: rotateX(90deg);
@@ -185,16 +185,19 @@ html {
   position: absolute;
   transform: translateZ(20rem) rotateX(90deg) rotateY(90deg);
   transform-origin: top;
+  z-index: 10;
 }
 
 .rope-1 {
   top: 10rem;
   left: 2.5rem;
+  z-index: 100;
 }
 
 .rope-2 {
   top: 10rem;
   right: 2.5rem;
+  z-index: 100;
 }
 
 .rope:before {
@@ -205,7 +208,7 @@ html {
   position: absolute;
   transform: translateY(-23rem) rotateZ(21deg);
   transform-origin: bottom;
-  z-index: 100;
+  z-index: 1000;
 }
 
 .rope:after {
@@ -216,7 +219,12 @@ html {
   position: absolute;
   transform: translateY(-23rem) rotateZ(-21deg);
   transform-origin: bottom;
-  z-index: 100;
+  z-index: 1000;
+  
+}
+
+.rope.rope-1:before, .rope.rope-1:after {
+  z-index: 10000;
 }
 
 .ball {
